[package]
authors = ["ddalton"]
edition = "2018"
readme = "README.md"
name = "blink_interrupt"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
tm4c-hal = "0.4.2"
tm4c123x = { version = "0.9.1", features = ["rt"] }
tm4c123x-hal = "0.10.2"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "blink_interrupt"
test = false
bench = false

[profile.release]
#codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
#lto = true # better optimizations
