[package]
authors = ["ddalton"]
edition = "2018"
readme = "README.md"
name = "stopwatch"
version = "0.1.0"

[dependencies]
embedded-hal = { version = "1.0", features = [] }
embedded-hal-bus = { version = "0.1", features = ["defmt-03"] }
cortex-m = "0.7.6"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
tm4c123x-hal = { version = "0.10.3", features = ["rt"] }
ssd1322_di = "0.2.0"
display-interface-spi = "0.4"
embedded-graphics = "0.8"

[[bin]]
name = "stopwatch"
test = false
bench = false

[profile.release]
debug = true
